--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <title>aliciaflows - your personal yoga teacher</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
-<body style="background-color: #e0e0e080;">
+<body>
   <app-root></app-root>
 </body>
 </html>
